backend/notification-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      serviceAccountName: notification-service
      containers:
        - name: notification-service
          image: amazon-clone-notification-service:latest
          imagePullPolicy: Never
          imagePullPolicy: IfNotPresent
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8014
          readinessProbe:
            httpGet:
              path: /readyz/
              port: 8014
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz/
              port: 8014
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
