backend/notification-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - port: 80
      targetPort: 8014
      protocol: TCP
  type: ClusterIP
